# efm32pg12-pac

./: Cargo.toml  EFM32PG12.svd  README.md
src/: acmp1.rs  adc0.rs  cmu.rs  cryotimer.rs  crypto0.rs  csen.rs  emu.rs  etm.rs  fpueh.rs  gpcrc.rs  gpio.rs  i2c0.rs  idac0.rs  ldma.rs  lesense.rs  letimer0.rs  leuart0.rs  lib.rs  msc.rs  pcnt1.rs  prs.rs  rmu.rs  rtcc.rs  smu.rs  trng0.rs  usart0.rs  vdac0.rs  wdog1.rs  wtimer1.rs
src/acmp0/: extifctrl.rs  hysteresis0.rs  hysteresis1.rs  inputsel.rs  routeloc0.rs
src/acmp1/: ctrl.rs  routeloc0.rs
src/adc0/: biasprog.rs  ctrl.rs  scanctrl.rs  scanctrlx.rs  scaninputsel.rs  scannegsel.rs  singlectrl.rs  singlectrlx.rs  status.rs
src/cmu/: adcctrl.rs  auxhfrcoctrl.rs  calctrl.rs  cmd.rs  ctrl.rs  dbgclksel.rs  dpllctrl.rs  hfbusclken0.rs  hfclksel.rs  hfclkstatus.rs  hfcorepresc.rs  hfexppresc.rs  hfperclken0.rs  hfperpresc.rs  hfpresc.rs  hfrcoctrl.rs  hfxoctrl.rs  hfxostartupctrl.rs  hfxosteadystatectrl.rs  hfxotimeoutctrl.rs  hfxotrimstatus.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  lfaclken0.rs  lfaclksel.rs  lfapresc0.rs  lfbclken0.rs  lfbclksel.rs  lfbpresc0.rs  lfeclksel.rs  lfepresc0.rs  lfrcoctrl.rs  lfxoctrl.rs  lock.rs  oscencmd.rs  routeloc0.rs  routeloc1.rs  routepen.rs  (+2 more)
src/cryotimer/: ctrl.rs
src/crypto0/: cstatus.rs  ctrl.rs  seqctrl.rs  wac.rs
src/crypto1/: dstatus.rs
src/csen/: ctrl.rs  dmcfg.rs  emactrl.rs  prssel.rs  scaninputsel0.rs  scaninputsel1.rs  singlectrl.rs  timctrl.rs
src/emu/: ctrl.rs  dcdcctrl.rs  dcdclpem01cfg.rs  dcdcmiscctrl.rs  em23pernoretaincmd.rs  em23pernoretainctrl.rs  ien.rs  (+12 more)
(+231 files in other folders)
