[package]
name = "efm32pg12-pac"
version = "0.1.0"
authors = ["Timo Kröger <timokroeger93@gmail.com>"]
edition = "2018"
description = "Peripheral access API for Silicon Labs EFM32PG12 microcontrollers"
keywords = ["arm", "cortex-m", "efm32", "svd2rust"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/timokroeger/efm32pg12-pac"

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.1"
vcell = "0.1.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.10"

[features]
rt = ["cortex-m-rt/device"]
